--- a/src/main/java/ca/footeware/swing/textify/Textify.form
+++ b/src/main/java/ca/footeware/swing/textify/Textify.form
@@ -82,6 +82,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Ubuntu Mono" size="18" style="0"/>
             </Property>
+            <Property name="name" type="java.lang.String" value="editor" noResource="true"/>
           </Properties>
         </Component>
       </SubComponents>
