--- a/src/main/java/ca/footeware/swing/textify/Textify.form
+++ b/src/main/java/ca/footeware/swing/textify/Textify.form
@@ -93,6 +93,7 @@
           <Image iconType="3" name="/images/icons8-new-document-24.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="New"/>
+        <Property name="name" type="java.lang.String" value="newButton" noResource="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
@@ -115,6 +116,7 @@
           <Image iconType="3" name="/images/icons8-save-24.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Save"/>
+        <Property name="name" type="java.lang.String" value="saveButton" noResource="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
